--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ appnope==0.1.0
 bkcharts==0.2
 bleach==2.0.0
 bokeh==0.12.6
+boto3==1.4.7
+botocore==1.7.12
 certifi==2016.2.28
 click==6.7
 cloudpickle==0.4.0
@@ -9,8 +11,10 @@ cycler==0.10.0
 dask==0.15.2
 decorator==4.1.2
 distributed==1.18.3
+docutils==0.14
 entrypoints==0.2.3
-heapdict==1.0.0
+graphviz==0.8
+HeapDict==1.0.0
 html5lib==0.999999999
 ipykernel==4.6.1
 ipython==6.1.0
@@ -18,6 +22,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.0.0
 jedi==0.10.2
 Jinja2==2.9.6
+jmespath==0.9.3
 jsonschema==2.6.0
 jupyter-client==5.1.0
 jupyter-console==5.1.0
@@ -49,6 +54,8 @@ PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.1
 requests==2.13.0
+s3fs==0.1.2
+s3transfer==0.1.11
 simplegeneric==0.8.1
 six==1.10.0
 sortedcontainers==1.5.7
